src/objects/Budget_Line_Item_MERC__c.object
<CustomObject>
    <description>Stores Individual Budget Line Items that roll up to the Budget Header for managing Meeting Budgets : MERC : Created on 09/27/2014 by Katy Lorenti, Mavens Consulting</description>
    <fields>
        <fullName>Additional_information_Budget_MERC__c</fullName>
        <description>Captures notes for additional information about the budget line item. Created 03/14/2014 by J Adams, Mavens Consulting</description>
        <label>Additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_MERC__c</fullName>
        <description>Tracks amount of Budget Line Item. Created 9/30/2013 by KLorenti.</description>
        <inlineHelpText>Please include Room Taxes in Amount if for Hotel.</inlineHelpText>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_PO_Number_MERC__c</fullName>
        <description>PO Number for Budget Line Item: Oliver Dunford 14th Dec 2013.</description>
        <label>Approved PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_MERC__c</fullName>
        <description>Master-Detail relationship to Budget Object. Created 9/27/2013 by KLorenti.</description>
        <label>Budget</label>
        <referenceTo>Budget_MERC__c</referenceTo>
        <relationshipLabel>Budget Line Items</relationshipLabel>
        <relationshipName>Budget_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Budget_Line_Item_Delta_MERC__c</fullName>
        <formula>if( Master_Budget_Line_Item_MERC__c != &apos;&apos;,  Amount_MERC__c - Master_Budget_Line_Item_MERC__r.Amount_MERC__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings/Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Budget_Line_Item_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Budget Line Item</label>
        <referenceTo>Budget_Line_Item_MERC__c</referenceTo>
        <relationshipLabel>Budget Line Item Versions</relationshipLabel>
        <relationshipName>Child_Budget_Line_Items_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Vendor_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship from Budget Line Item to Meeting Vendor. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <label>Vendor</label>
        <referenceTo>Meeting_Vendor_MERC__c</referenceTo>
        <relationshipLabel>Budget Line Items</relationshipLabel>
        <relationshipName>Budget_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_MERC__c</fullName>
        <formula>IF( Master_Budget_Line_Item_Delta_MERC__c &gt; 0 , ABS(Master_Budget_Line_Item_Delta_MERC__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Budget_Line_Item_Version_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Budget Line Item Version</label>
        <referenceTo>Budget_Line_Item_MERC__c</referenceTo>
        <relationshipLabel>Budget Line Items (Previous Budget Line Item Version)</relationshipLabel>
        <relationshipName>Child_Budget_Line_Item_Versions_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_MERC__c</fullName>
        <formula>IF( Master_Budget_Line_Item_Delta_MERC__c &lt; 0 , ABS(Master_Budget_Line_Item_Delta_MERC__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Type_MERC__c</fullName>
        <description>Capture Budget-SubTypes. Dependent on Budget Type. Created 11/22/2013 by KLorenti, Mavens Consulting.</description>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type_MERC__c</controllingField>
            <picklistValues>
                <fullName>Airport Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break Out Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliveries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incidentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luggage Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Planning Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Room Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Per Diems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Transportation/Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railway Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Including Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Rental for Dinner or Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Pre/Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer To and From Congress Venue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_MERC__c</fullName>
        <description>Track type of Budget Line item. Created 9/30/2013 by KLorenti.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assistance On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorarium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursable Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signage/Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_MERC__c</fullName>
        <description>Displays name of Vendor on Budget Line Item. Created 02/26/2014 by KLorenti, Mavens Consulting</description>
        <formula>Meeting_Vendor_MERC__r.Account_MERC__r.Name</formula>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number_MERC__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget Line Item</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>Budget Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_must_not_be_less_than_zero_MERC</fullName>
        <active>true</active>
        <description>Ensure Budget Line amounts are not less than zero</description>
        <errorConditionFormula>Amount_MERC__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount_MERC__c</errorDisplayField>
        <errorMessage>The Budget Line Item amount may not be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MERC_Prevent_Budget_Line_Edit_Active_Arc</fullName>
        <active>true</active>
        <description>Prevents edits of Budget Lines for Active or Archived Budgets - JFerraro 10/23/2013</description>
        <errorConditionFormula>$Setup.Mercury_Settings_MERC__c.Budget_Edit_Validation_MERC__c &amp;&amp; 
(
Budget_MERC__r.RecordType.DeveloperName == &apos;MERC_Budget_Active&apos; 
|| 
Budget_MERC__r.RecordType.DeveloperName == &apos;MERC_Budget_Archived&apos;
)</errorConditionFormula>
        <errorMessage>You cannot modify Budget Lines on Active or Archived Budgets.</errorMessage>
    </validationRules>
</CustomObject>